@@ -1,5 +1,10 @@
 2002-11-18  Daniel Elstner  <daniel.elstner@gmx.net>
 
+	* src/aboutdialog.cc: Refine the design a bit, and mention Ross
+	Burton (Debian packager) as major contributor.
+
+2002-11-18  Daniel Elstner  <daniel.elstner@gmx.net>
+
 	* src/controller.cc (create_menubar): Don't use "<control>f" as
 	accelerator for "Move forward" because it's already occupied by
 	the tree view search facility.
